2013-10-10  Ramon Novoa  <rnovoa@artica.es>

	* src/expand_command.cc: Improved injection detection. Thanks to
	  Robert van Hamburg (xistence) for finding the vulnerability.

2013-10-10  Ramon Novoa  <rnovoa@artica.es>

	* src/expand_command.cc,
	  src/expand_command.hh: Patched to avoid command injections.

2012-05-04  Sancho Lerena <slerena@artica.es>

        * anytermd.suse.spec: Added specific spec for SUSE. Tested on a
        opensuse 11.3/i586.


2012-05-04  Sancho Lerena <slerena@artica.es>

	* Added to Pandora FMS repo. Some minor modifications on c files
	in order to compile it without problems.

	Added README and INSTALL files.

---- old changelog contents below -----

1.1.29

	Fix for compilers that don't think they have atomic operations.
	Fix brokenness on Linux 2.4.

1.1.28

	Re-organise directory structure with separate build directory.
	Add manpage.
	Strip query string before looking for static content.
	Remove dependency on Boost.Thread and Boost.ProgramOptions.

1.1.27

	Build experimentally on OS X.
	Work around FF3 scrollbar issue.
	Remove unused dangling symlink.
	Fix mimetype.sh when there are multiple matching entries in 
		/etc/mime.types, e.g. Suse 11.

1.1.26

	Remove apache module and anygetty.
	Add control keys menu.

1.1.25

	Maybe make Safari keyboard input work again.
	Add mozilla copy-to-clipboard from Simon Wissinger.
	Set the erase character to backspace.
	Add on_close_goto_url.
	Tidy up various CSS things.

1.1.24

	OpenBSD fixes (from Patrick Augé).
	Limit scrollback to 1000 lines.

1.1.23

	Compile on g++ 3.4.4.
	Work with Firefox 3.
	Try harder to make subprocesses terminate properly.
	Fix compilation errors in daemon/Screen.hh.

1.1.22

	Handle ALT keys.
	Handle ctrl-space.
	Remove standalone daemon's recode dependency.
	Add --name option to daemon so multiple pid files are possible.
	Compile on g++ 4.0.2.
	Cope better when subprocess is unkillable (e.g. sudo).
	Avoid zombie processes that escape waitpid().

1.1.21
